# EU_Energy_SubsidiesAndCost

./: CMakeLists.txt  EU_Energy_SubsidiesAndCost.sln  LevelisedCostOfPowerAndHeat.h  README.md  Test_on_Physical_Quantity.cpp  Test_on_Template_Functions.cpp
Data_Files/: TEST_1_LCOE.csv  TEST_1_LCOE.xlsx  TEST_DUMMY.csv  TEST_DUMMY.xlsx
Data_Files/TEST_on_Save_Read_Files/: LCOE.csv  LCOE_CHP.csv  LCOE_CHP_origin.csv  LCOE_origin.csv  LCOH.csv  LCOH_CHP.csv  LCOH_CHP_origin.csv  LCOH_origin.csv
EU_Energy_SubsidiesAndCost/: EU_Energy_SubsidiesAndCost.vcxproj  EU_Energy_SubsidiesAndCost.vcxproj.filters
Header_Files/: EUSAC.h  EUSAC_NS.h  LevelisedCostOfPowerAndHeat.h  SRF.h  SRF_ALIAS.h  ZAMATH.h  ZAMATH_ALIAS.h
Source_Files/: EUSAC.cpp  LevelisedCostOfPowerAndHeat.cpp  PYBIND_EUSAC.cpp  PythonInteface.cpp  SRF.cpp  SRF_Basics.cpp  Test_Main_Script.cpp  Test_on_Physical_Quantity.cpp  Test_on_Save_Read_Files.cpp  Test_on_Template_Functions.cpp  ZAMATH.cpp  ZAMATH_Basics.cpp
Test/: EU_Energy_SubsidiesAndCost.cpp  Test_on_Physical_Quantity.cpp  spammodule.cpp
cmake_Project_CPP/: CMakeLists.txt
cmake_Project_PYD/: CMakeLists.txt
cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EUSAC.sln  EUSAC.vcxproj  EUSAC.vcxproj.filters  LevelisedCostOfPowerAndHeat.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmake_build/cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.sln
